src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Preferred_Email_Type__c</fullName>
        <description>**Defaults to Personal Email** Select the Preferred Email Type for the Contact. The value of the corresponding email field will update the standard Contact Email field.</description>
        <inlineHelpText>**Defaults to Personal Email** Select the Preferred Email Type for the Contact. The value of the corresponding email field will update the standard Contact Email field.</inlineHelpText>
        <label>Preferred Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Email__c</fullName>
        <description>**System Calculated** The Preferred Email for the Contact is calculated by mapping the Preferred Email Type to it&apos;s corresponding field&apos;s value.</description>
        <formula>IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Personal&quot;) &amp;&amp; NOT(OrderApi__Personal_Email_Opt_Out__c), OrderApi__Personal_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Work&quot;) &amp;&amp; NOT(OrderApi__Work_Email_Opt_Out__c), OrderApi__Work_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Other&quot;) &amp;&amp; NOT(OrderApi__Other_Email_Opt_Out__c),OrderApi__Other_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Assistant&quot;) &amp;&amp; NOT(OrderApi__Assistant_Email_Opt_Out__c),OrderApi__Assistant_Email__c, &apos;&apos;))))</formula>
        <inlineHelpText>**System Calculated** The Preferred Email for the Contact is calculated by mapping the Preferred Email Type to it&apos;s corresponding field&apos;s value.</inlineHelpText>
        <label>Preferred Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Phone_Type__c</fullName>
        <description>**Defaults to Personal Email** Select the Preferred Phone Type for the Contact. The value of the corresponding phone field will update the standard Contact Phone field.</description>
        <inlineHelpText>**Defaults to Personal Email** Select the Preferred Phone Type for the Contact. The value of the corresponding phone field will update the standard Contact Phone field.</inlineHelpText>
        <label>Preferred Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                    <default>true</default>
                    <label>Mobile</label>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Phone__c</fullName>
        <description>**System Calculated** The Preferred Phone for the Contact is calculated by mapping the Preferred Phone Type to it&apos;s corresponding field&apos;s value.</description>
        <formula>IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Mobile&quot;) &amp;&amp; NOT(OrderApi__Mobile_Do_Not_Call__c), MobilePhone,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Home&quot;) &amp;&amp; NOT(OrderApi__Home_Do_Not_Call__c), HomePhone,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Work&quot;) &amp;&amp; NOT(OrderApi__Work_Do_Not_Call__c),OrderApi__Work_Phone__c,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Other&quot;) &amp;&amp; NOT(OrderApi__Other_Do_Not_Call__c),OtherPhone,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Assistant&quot;) &amp;&amp; NOT(OrderApi__Assistant_Do_Not_Call__c),AssistantPhone,
&apos;&apos;)))))</formula>
        <inlineHelpText>**System Calculated** The Preferred Phone for the Contact is calculated by mapping the Preferred Phone Type to it&apos;s corresponding field&apos;s value.</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rules_Usages__c</fullName>
        <description>** SYSTEM ** JSON of price rules</description>
        <inlineHelpText>** SYSTEM ** JSON of price rules</inlineHelpText>
        <label>SYSTEM</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Privacy_Settings__c</fullName>
        <description>**Defaults to private** This field sets the visibility settings when contact search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</description>
        <inlineHelpText>**Defaults to private** This field sets the visibility settings when contact search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</inlineHelpText>
        <label>Privacy Settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>public</fullName>
                </value>
                <value>
                    <fullName>private</fullName>
                    <default>true</default>
                    <label>private</label>
                </value>
                <value>
                    <fullName>unlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Address_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s billing address with the value of the contact&apos;s mailing address. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s billing address with the value of the contact&apos;s mailing address. Default is unchecked.</inlineHelpText>
        <label>Sync Address w/Account (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Address_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s shipping address with the value of the contact&apos;s mailing address. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s shipping address with the value of the contact&apos;s mailing address. Default is unchecked.</inlineHelpText>
        <label>Sync Address w/Account (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</inlineHelpText>
        <label>Sync Preferred Email w/Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</inlineHelpText>
        <label>Sync Preferred Phone w/Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Work Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Work Phone.</inlineHelpText>
        <label>Work Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact will not receive communications to their Work Email.</description>
        <inlineHelpText>Contact will not receive communications to their Work Email.</inlineHelpText>
        <label>Work Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Email__c</fullName>
        <description>Work/Business Email for the Contact.</description>
        <inlineHelpText>Work/Business Email for the Contact.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Phone__c</fullName>
        <description>The Work Phone for the Contact.</description>
        <inlineHelpText>The Work Phone for the Contact.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PagesApi__Cookie_Usage_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Contact has accepted the Cookie Usage Prompt and will not be prompted again.</description>
        <inlineHelpText>When checked, the Contact has accepted the Cookie Usage Prompt and will not be prompted again.</inlineHelpText>
        <label>Cookie Usage Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Site you wish to use as the default Site for the Contact.</description>
        <inlineHelpText>Select the Site you wish to use as the default Site for the Contact.</inlineHelpText>
        <label>Site</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualify_for_Active_Membership__c</fullName>
        <formula>if(AND(Graduation_Date__c &lt; Today(),  Residency_Completion_Date__c &lt; Today()), TRUE, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualify for Active Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualify_for_Resident_Membership__c</fullName>
        <formula>if(Residency_Completion_Date__c &gt; today(), True, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualify for Resident Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Chapter_Change__c</fullName>
        <label>Reason for Chapter Change</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Type Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residency_Completion_Date__c</fullName>
        <description>Physician&apos;s residency completion date</description>
        <inlineHelpText>Physician&apos;s residency completion date</inlineHelpText>
        <label>Residency Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Chapter__c</fullName>
        <label>State Chapter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Months_of_Membership__c</fullName>
        <label>Total Months of Membership</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>